fix(blockCarousel): add inset to remove overflow-y

--- a/assets/styles/_base.css
+++ b/assets/styles/_base.css
@@ -568,6 +568,15 @@ flynt-component {
   background-color: currentColor !important;
 }
 
+[name='BlockCarouselCities'],
+[name='BlockCarousel'] {
+  @screen md {
+    .swiper-container {
+      clip-path: inset( -100vw -100vw -100vw 0 );
+    }
+  }
+}
+
 [name='BlockCarouselCities'] {
   .swiper-container {
     .swiper-slide.city-slide {
@@ -577,7 +586,6 @@ flynt-component {
 
   @screen md {
     .swiper-container {
-      clip-path: inset( -100vw -100vw -100vw 0 );
       .swiper-slide.city-slide {
         aspect-ratio: auto;
         width: 315px;
